Tweak wording in discussion of basic completion style

--- a/README.org
+++ b/README.org
@@ -76,13 +76,15 @@ the following configuration:
         completion-category-overrides '((file (styles basic partial-completion))))
 #+end_src
 
-The =basic= completion style is specified as fallback in addition to =orderless= in
-order to ensure that completion commands which rely on dynamic completion
-tables, e.g., ~completion-table-dynamic~ or ~completion-table-in-turn~, work
-correctly. Furthermore the =basic= completion style is needed by Tramp hostname
-completion for the =file= completion category in the
-=completion-category-overrides=. In addition, the =partial-completion= style allows
-you to use wildcards for file completion and partial paths, e.g., ~/u/l/s~ for
+The =basic= completion style is specified as fallback in addition to
+=orderless= in order to ensure that completion commands which rely on
+dynamic completion tables, e.g., ~completion-table-dynamic~ or
+~completion-table-in-turn~, work correctly. Furthermore the =basic=
+completion style needs to be tried /first/ (not as a fallback) for TRAMP
+hostname completion to work. In order to achieve that, we add an entry
+for the =file= completion category in the =completion-category-overrides=
+variable. In addition, the =partial-completion= style allows you to use
+wildcards for file completion and partial paths, e.g., ~/u/l/s~ for
 ~/usr/share/local~.
 
 Bug reports are highly welcome and appreciated!
