--- a/orderless.texi
+++ b/orderless.texi
@@ -75,13 +75,11 @@ A completion style is a back-end for completion and is used from a
 front-end that provides a completion UI@. Any completion style can be
 used with the default Emacs completion UI (sometimes called minibuffer
 tab completion), with the built-in Icomplete package (which is similar
-to the more well-known Ido Mode), or with some third party minibuffer
-completion frameworks such as @uref{https://gitlab.com/protesilaos/mct, Mct}, @uref{https://github.com/minad/vertico, Vertico}, @uref{https://github.com/raxod502/selectrum, Selectrum} (in its default
-configuration), or @uref{https://github.com/oantolin/icomplete-vertical, icomplete-vertical} (note there is also a @emph{built-in}
-package named icomplete-vertical in the unreleased version 28 of
-Emacs, which will eventually make the third party icomplete-vertical
-obsolete ---orderless works equally well with both icomplete-vertical
-packages).
+to the more well-known Ido Mode), the icomplete-vertical variant from
+Emacs 28 (see the external @uref{https://github.com/oantolin/icomplete-vertical, icomplete-vertical} package to get that
+functionality on earlier versions of Emacs), or with some third party
+minibuffer completion frameworks such as @uref{https://gitlab.com/protesilaos/mct, Mct}, @uref{https://github.com/minad/vertico, Vertico}, or @uref{https://github.com/raxod502/selectrum, Selectrum}
+(in its default configuration).
 
 All the completion UIs just mentioned are for minibuffer completion,
 used when Emacs commands prompt the user in the minibuffer for some
@@ -125,13 +123,15 @@ the following configuration:
       completion-category-overrides '((file (styles basic partial-completion))))
 @end lisp
 
-The @samp{basic} completion style is specified as fallback in addition to @samp{orderless} in
-order to ensure that completion commands which rely on dynamic completion
-tables, e.g., @code{completion-table-dynamic} or @code{completion-table-in-turn}, work
-correctly. Furthermore the @samp{basic} completion style is needed by Tramp hostname
-completion for the @samp{file} completion category in the
-@samp{completion-category-overrides}. In addition, the @samp{partial-completion} style allows
-you to use wildcards for file completion and partial paths, e.g., @code{/u/l/s} for
+The @samp{basic} completion style is specified as fallback in addition to
+@samp{orderless} in order to ensure that completion commands which rely on
+dynamic completion tables, e.g., @code{completion-table-dynamic} or
+@code{completion-table-in-turn}, work correctly. Furthermore the @samp{basic}
+completion style needs to be tried @emph{first} (not as a fallback) for TRAMP
+hostname completion to work. In order to achieve that, we add an entry
+for the @samp{file} completion category in the @samp{completion-category-overrides}
+variable. In addition, the @samp{partial-completion} style allows you to use
+wildcards for file completion and partial paths, e.g., @code{/u/s/l} for
 @code{/usr/share/local}.
 
 Bug reports are highly welcome and appreciated!
@@ -511,7 +511,7 @@ components in any order and it can be used with either the @uref{https://github.
 @uref{https://github.com/abo-abo/swiper, Ivy} completion UIs (it does not offer a completion-style that could be
 used with Emacs' default completion UI, Mct, Vertico or with Icomplete).
 The components can be matched literally, as regexps, as initialisms or
-in the flex style (called "fuzzy" in prescient). In addition to
+in the flex style (called ``fuzzy'' in prescient). In addition to
 matching, @samp{prescient.el} also supports sorting of candidates (@samp{orderless}
 leaves that up to the candidate source and the completion UI).
 
