--- a/README.org
+++ b/README.org
@@ -169,7 +169,28 @@ regexp styles.
 
  For more fine-grained control on which matching styles to use for
  each component of the input string, you can customize the variable
- =orderless-style-dispatchers=.
+ =orderless-style-dispatchers=. You can use this feature to define your
+ own "query syntax". For example, the default value of
+ =orderless-style-dispatchers= lists a single dispatcher called
+ =orderless-affix-dispatch= which enables a simple syntax based on
+ special characters used as either a prefix or suffix:
+
+ - =!= makes the rest of the component match match using the
+   =orderless-without-literal=, that is, both =!bad= and =bad!= will match
+   string that do /not/ contain the substring =bad=.
+ - =,= uses =orderless-initialism=.
+ - === uses =orderless-literal=.
+ - =~= uses =orderless-flex=.
+ - =%= makes the string match ignoring diacritics and similar
+   inflections on characters (it uses the function =char-fold-to-regexp=
+   to do this).
+
+ You can add, remove or change this mapping between affix characters
+ and matching styles by customizing the user option
+ =orderless-affix-dispatch-alist=. Most users will probably find this
+ type of customization sufficient for their query syntax needs, but
+ for those desiring further control the rest of this section explains
+ how to implement your own style dispatchers.
 
  Style dispatchers are functions which take a component, its index in
  the list of components (starting from 0), and the total number of
@@ -182,7 +203,8 @@ regexp styles.
  the given one. Consult the documentation of =orderless-dispatch= for
  full details.
 
- As an example, say you wanted the following setup:
+ As an example of writing your own dispatchers, say you wanted the
+ following setup:
 
  - you normally want components to match as regexps,
  - except for the first component, which should always match as an
@@ -191,7 +213,8 @@ regexp styles.
  - later components ending in =~= should match (the characters
    other than the final =~=) in the flex style, and
  - later components starting with =!= should indicate the rest of the
-   component is a literal string not contained in the candidate.
+   component is a literal string not contained in the candidate (this
+   is part of the functionality of the default configuration).
 
  You can achieve this with the following configuration:
 
