--- a/README.org
+++ b/README.org
@@ -307,11 +307,11 @@ completion is the one that ends up being used, of course.
 
 ** Pattern compiler
 
-The default mechanism for turning an input string into a list of regexps to
-match against, configured using =orderless-matching-styles=, is probably flexible
-enough for the vast majority of users. The patterns are compiled by the
-=orderless-compile=. Under special circumstances it may be useful to implement a
-custom pattern compiler by advising the =orderless-compile=.
+The default mechanism for turning an input string into a predicate and a list of
+regexps to match against, configured using =orderless-matching-styles=, is
+probably flexible enough for the vast majority of users. The patterns are
+compiled by =orderless-compile=. Under special circumstances it may be useful to
+implement a custom pattern compiler by advising =orderless-compile=.
 
 ** Interactively changing the configuration
 
