--- a/README.org
+++ b/README.org
@@ -133,6 +133,9 @@ matching styles are:
 - orderless-literal :: the component is treated as a literal string
   that must occur in the candidate.
 
+- orderless-prefix :: the component is treated as a literal string
+  that must occur as a prefix of a candidate.
+
 - orderless-prefixes :: the component is split at word endings and
   each piece must match at a word boundary in the candidate, occurring
   in that order.
@@ -241,7 +244,7 @@ Style modifiers should not be used directly in
    (defun not-if-bang (pattern _index _total)
      (cond
       ((equal "!" pattern)
-       '(orderless-literal . ""))
+       #'ignore)
       ((string-prefix-p "!" pattern)
        `(orderless-not . ,(substring pattern 1)))))
 
