--- a/orderless.texi
+++ b/orderless.texi
@@ -169,6 +169,10 @@ If the component is not a valid regexp, it is ignored.
 the component is treated as a literal string
 that must occur in the candidate.
 
+@item orderless-prefix
+the component is treated as a literal string
+that must occur as a prefix of a candidate.
+
 @item orderless-prefixes
 the component is split at word endings and
 each piece must match at a word boundary in the candidate, occurring
@@ -307,7 +311,7 @@ You can achieve this with the following configuration:
 (defun not-if-bang (pattern _index _total)
   (cond
    ((equal "!" pattern)
-    '(orderless-literal . ""))
+    #'ignore)
    ((string-prefix-p "!" pattern)
     `(orderless-not . ,(substring pattern 1)))))
 
