README: Suggest completion-pcm-leading-wildcard on Emacs 31
This way partial-completion will behave like substring instead of like basic
prefix completion. If combined with orderless, the behavior will be less
staggering for files, where the style may change during completion from
partial-completion to orderless.

--- a/README.org
+++ b/README.org
@@ -64,7 +64,8 @@ If you use ELPA or MELPA, the easiest way to install =orderless= is via
     :ensure t
     :custom
     (completion-styles '(orderless basic))
-    (completion-category-overrides '((file (styles partial-completion)))))
+    (completion-category-overrides '((file (styles partial-completion))))
+    (completion-pcm-leading-wildcard t)) ;; Emacs 31: partial-completion behaves like substring
 #+end_src
 
 Alternatively, put =orderless.el= somewhere on your =load-path=, and use
@@ -73,7 +74,8 @@ the following configuration:
 #+begin_src emacs-lisp
   (require 'orderless)
   (setq completion-styles '(orderless basic)
-        completion-category-overrides '((file (styles partial-completion))))
+        completion-category-overrides '((file (styles partial-completion)))
+        completion-pcm-leading-wildcard t) ;; Emacs 31: partial-completion behaves like substring
 #+end_src
 
 The =basic= completion style is specified as fallback in addition to
